# LedgerLoop-App

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY_RAILWAY.md  EXPENSE_PARSER_PROMPT.md  Expense Tracker App.txt  FEATURE_PROGRESS.md  LICENSE  MVP_Execution_Plan.md  README.md  SECURITY.md  SHARE_NOTE.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/ai/: TALK_TO_DATA_IMPLEMENTATION_PLAN.md
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  analysis.py  auth.py  deps.py  expenses.py  family_members.py  router.py  settings.py  taxonomy.py
backend/app/core/: config.py  crypto.py  db.py  security.py
backend/app/models/: __init__.py  analysis_query.py  analysis_query_attempt.py  expense.py  family_member.py  household.py  household_category.py  household_subcategory.py  llm_setting.py  user.py  user_login_event.py
backend/app/schemas/: admin.py  analysis.py  auth.py  expense.py  family_member.py  settings.py  taxonomy.py
backend/app/services/: family_member_service.py  taxonomy_service.py
backend/app/services/analysis/: __init__.py  category_taxonomy.py  logging_service.py  prompt_schema_expenses_users.json  prompts.py  schema_introspection.py  sql_agent.py  sql_validation.py  tool_query_engine.py
backend/app/services/audio/: __init__.py  groq_transcription.py
backend/app/services/auth/: __init__.py  clerk.py
backend/app/services/llm/: __init__.py  base.py  cerebras_provider.py  gemini_provider.py  mock_provider.py  openai_provider.py  parser_utils.py  prompts.py  provider_factory.py  settings_service.py  (+1 more)
backend/tests/: conftest.py  test_admin_api.py  test_analysis_api.py  test_analysis_context_resolution.py  test_auth_flow.py  test_cerebras_provider.py  test_clerk_auth.py  test_dashboard_api.py  test_expense_confirm.py  test_expense_delete_api.py  test_expense_list_api.py  test_expense_log.py  test_expense_transcription.py  test_expense_update_api.py  test_family_members_api.py  test_settings_api.py  test_sql_validation.py  test_taxonomy_api.py  test_tool_query_engine.py
(+15 files in other folders)
