[project]
name = "expense-tracker-api"
version = "0.1.0"
description = "Chat-first family expense tracker backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlmodel>=0.0.22",
  "httpx>=0.27.2",
  "asyncpg>=0.30.0",
  "aiosqlite>=0.20.0",
  "pydantic-settings>=2.6.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "pwdlib>=0.3.0",
  "argon2-cffi>=23.1.0",
  "email-validator>=2.2.0",
  "cerebras-cloud-sdk>=1.67.0",
  "langchain>=0.3.26",
  "langgraph>=0.2.34",
  "sqlglot>=25.34.1",
  "openai>=1.109.1",
  "openai-agents>=0.2.7",
  "ipykernel>=7.2.0",
  "python-dotenv>=1.2.1",
  "langchain-cerebras>=0.8.2",
  "sqlalchemy>=2.0.46",
  "psycopg2-binary>=2.9.11",
  "langchain-groq>=1.1.2",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
